# tiny-oidc

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.debug  LOGS FOR BLOG  README.md  app.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: release.yml
app/: __init__.py  crypto.py  log.py  prompts.py  session.py  times.py  urls.py
app/main/: __init__.py  client_to_server.py  index.py  oidc.py  server_to_server.py  user_auth.py
app/models/: __init__.py  application.py  authentication.py  authorization.py  log.py  refreshtoken.py  session.py  user.py
app/views/: __init__.py  well_known.py
app/views/client_to_server/: __init__.py  authorize.py  client.py
app/views/core/: __init__.py  app.py  health.py  index.py
app/views/server_to_server/: __init__.py  introspection.py  keys.py  token.py  user_info.py  well_known.py
app/views/user/: __init__.py  consent.py  login.py  logout.py
tests/: conftest.py  helpers.py  test_authorization.py  test_consent.py  test_discovery_jwks.py  test_logout.py  test_token.py  test_userinfo_introspection.py
tests/e2e/: conftest.py  personas.py  rp_app.py  test_grants.py  test_login_flow.py  test_protected_resources.py
