[tool.pytest.ini_options]
testpaths = ["tests"]
# Put the project root (for `app`/`config`) and tests/ (for `conftest` helpers)
# on the import path.
pythonpath = [".", "tests"]

[project]
name = "tiny-oidc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.0",
    "pyjwt>=2.10.1",
    "cryptography>=44.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
