[tool.pytest.ini_options]
testpaths = ["tests"]
# Put the project root (for `app`/`config`) and tests/ (for `conftest` helpers)
# on the import path.
pythonpath = [".", "tests"]
markers = [
    # Browser-driven tests that spawn real IdP and RP servers. They need the
    # Playwright browsers installed (`uv run playwright install chromium`);
    # deselect with `-m "not e2e"`.
    "e2e: end-to-end tests driven through a real browser",
]

[project]
name = "tiny-oidc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.0",
    "pyjwt>=2.10.1",
    "cryptography>=44.0.0",
]

[dependency-groups]
dev = [
    "playwright>=1.61.0",
    "pytest>=9.1.1",
    "pytest-playwright>=0.8.0",
    "requests>=2.34.2",
]
